--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>AMAS Farm LTD</title>
+    <title>Amas Farm LTD</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -75,11 +75,10 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto">
               <a href="index.html" class="nav-item nav-link">Home</a>
-              <a href="about.html" class="nav-item nav-link active">About</a>
+              <a href="about.html" class="nav-item nav-link">About</a>
               <a href="product.html" class="nav-item nav-link">Products</a>
-              <a href="gallery.html" class="nav-item nav-link">Gallery</a>
+              <a href="gallery.html" class="nav-item nav-link active">Gallery</a>
               <a href="contact.html" class="nav-item nav-link">Contact</a>
-            </div>
             <div class="border-start ps-4 d-none d-lg-block">
               <button type="button" class="btn btn-sm p-0">
                 <i class="fa fa-search"></i>
@@ -97,101 +96,78 @@
       data-wow-delay="0.1s"
     >
       <div class="container text-center py-5">
-        <h1 class="display-2 text-dark mb-4 animated slideInDown">About Us</h1>
+        <h1 class="display-2 text-dark mb-4 animated slideInDown">Gallery</h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item"><a href="#">Home</a></li>
             <li class="breadcrumb-item"><a href="#">Pages</a></li>
-            <li class="breadcrumb-item text-dark" aria-current="page">About</li>
+            <li class="breadcrumb-item text-dark" aria-current="page">
+              Gallery
+            </li>
           </ol>
         </nav>
       </div>
     </div>
     <!-- Page Header End -->
 
-    <!-- About Start -->
-    <div class="container-xxl py-5">
-      <div class="container">
-        <div class="row g-5">
-          <div class="col-lg-6">
-            <div class="row g-3">
-              <div class="col-6 text-end">
-                <img
-                  class="img-fluid bg-white w-100 mb-3 wow fadeIn"
-                  data-wow-delay="0.1s"
-                  src="Poultry/download (1) (1).jpg"
-                  alt=""
-                />
-                <img
-                  class="img-fluid bg-white w-50 wow fadeIn"
-                  data-wow-delay="0.2s"
-                  src="Poultry/gizzard.jpg"
-                  alt=""
-                />
-              </div>
-              <div class="col-6">
-                <img
-                  class="img-fluid bg-white w-50 mb-3 wow fadeIn"
-                  data-wow-delay="0.3s"
-                  src="Poultry/download (2).jpg"
-                  alt=""
-                />
-                <img
-                  class="img-fluid bg-white w-100 wow fadeIn"
-                  data-wow-delay="0.4s"
-                  src="Poultry/eggs2.jpg"
-                  alt=""
-                />
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-            <div class="section-title">
-              <p class="fs-5 fw-medium fst-italic text-primary">About Us</p>
-              <h1 class="display-6">What we do best</h1>
-            </div>
-            <div class="row g-3 mb-4">
-              <div class="col-sm-4">
-                <img
-                  class="img-fluid bg-white w-100"
-                  src="Poultry/white layers.jpg"
-                  alt="chicken picture"
-                />
-              </div>
-              <div class="col-sm-8">
-                <h5>We raise, fed and processed our birds in Ghana</h5>
-                <p class="mb-0">
-                  All of our poultryis produced, processed and transported to
-                  the absolute highest standards.
-                </p>
-              </div>
-            </div>
-            <div class="border-top mb-4"></div>
-            <div class="row g-3">
-              <div class="col-sm-8">
-                <h5>Expect the Quality, Healthy and Tasty chicken from us</h5>
-                <p class="mb-0">
-                  We take great care with the processing of our poultry in order
-                  to ensure the quality, freshness, taste and safetyt of our
-                  products.
-                </p>
-              </div>
-              <div class="col-sm-4">
-                <img
-                  class="img-fluid bg-white w-100"
-                  src="Poultry/broilers.jpg"
-                  alt=""
-                />
-              </div>
-            </div>
-          </div>
+    <!-- Gallery View Start -->
+
+    <div
+          class="section-title text-center mx-auto wow fadeInUp"
+          data-wow-delay="0.1s"
+          style="max-width: 500px"
+        >
+          <p class="fs-5 fw-medium fst-italic text-primary"></p>
+          <h1 class="display-6">Emphasiszing Freshness and Quality</h1>
         </div>
-      </div>
+
+    <div class="container-xxl py-5">
+        <div class="container">
+          <div class="row g-5">
+                <div class="row">
+                    <div class="column">
+                        <div><img class="bod" src="Poultry/broiler2.jpeg">
+                            <p>One line Caption</p>
+                        </div>
+                        <div><img class="bod" src="Poultry/broilers.jpg">
+                            <p>One line Caption</p></div>
+                        <div><img class="bod" src="Poultry/download (1).jpg">
+                            <p>One line Caption</p>
+                        </div> 
+                    </div>
+                    <div class="column">
+                        <div><img class="bod" src="Poultry/young broilers1.png">
+                            <p>One line Caption</p>
+                        </div>
+                        <div><img class="bod" src="Poultry/white layers2.jpg">
+                            <p>One line Caption</p>
+                        </div>
+                        <div><img class="bod" src="Poultry/gizzard.jpg">
+                            <p>One line Caption</p>
+                        </div>
+                        <div><img class="bod" src="Poultry/eggs2.jpg">
+                            <p>One line Caption</p>
+                        </div>  
+                    </div>
+                    <div class="column">
+                        <div><img class="bod" src="Poultry/day old.jpg">
+                            <p>One line Caption</p>
+                        </div>
+                        <div><img class="bod" src="Poultry/old day2.jpeg"></div>
+                        <p>One line Caption</p>
+                        <div><img class="bod" src="Poultry/white layers.jpg">
+                        <p>One line Caption</p></div>   
+                    </div>
+                </div>
+             </div>
+        </div>
     </div>
-    <!-- About End -->
+
+    
+
 
     <!-- Footer Start -->
-    <div
+   <div
       class="container-fluid bg-dark footer mt-5 py-5 wow fadeIn"
       data-wow-delay="0.1s"
     >
@@ -208,7 +184,7 @@
               8181748/+233 24 4113533
             </p>
             <p class="mb-2">
-              <i class="fa fa-envelope text-primary me-3"></i>info@example.com
+              <i class="fa fa-envelope text-primary me-3"></i>info@amasfarmltd.com
             </p>
             <div class="d-flex pt-3">
               <a class="btn btn-square btn-primary rounded-circle me-2" href=""
@@ -250,11 +226,12 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-            &copy; <a class="fw-medium" href="#">AMAS FARMS LTD</a>, All Right
+            &copy; <a class="fw-medium" href="#">Your Site Name</a>, All Right
             Reserved.
           </div>
           <div class="col-md-6 text-center text-md-end">
             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+            Designed By
             <a class="fw-medium" href="https://htmlcodex.com">HTML Codex</a>
           </div>
         </div>
