--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>AMAS Farm LTD</title>
+    <title>Amas Farm LTD</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -77,18 +77,7 @@
               <a href="index.html" class="nav-item nav-link active">Home</a>
               <a href="about.html" class="nav-item nav-link">About</a>
               <a href="product.html" class="nav-item nav-link">Products</a>
-              <div class="nav-item dropdown">
-                <a
-                  href="#"
-                  class="nav-link dropdown-toggle"
-                  data-bs-toggle="dropdown"
-                  >Pages</a
-                >
-                <div class="dropdown-menu bg-light rounded-0 m-0">
-                  <a href="feature.html" class="dropdown-item">Features</a>
-                  <a href="blog.html" class="dropdown-item">Blog Article</a>
-                </div>
-              </div>
+              <a href="gallery.html" class="nav-item nav-link">Gallery</a>
               <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
             <div class="border-start ps-4 d-none d-lg-block">
@@ -111,11 +100,7 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img
-              class="w-100"
-              src="Poultry/Egg-Layers-Farming banner.jpg"
-              alt="Image"
-            />
+            <img class="w-100" src="Poultry/day old.jpg" alt="Image" />
             <div class="carousel-caption">
               <div class="container">
                 <div class="row justify-content-center">
@@ -125,7 +110,7 @@
                       <strong class="text-dark">AMAS FARM LTD</strong>
                     </p>
                     <h1 class="display-1 text-dark mb-4 animated zoomIn">
-                      Quality Chicken
+                      Quality Quality Products
                     </h1>
                     <a
                       href="product.html"
@@ -138,7 +123,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="w-100" src="Poultry/download2.jpg" alt="Image" />
+            <img class="w-100" src="Poultry/old day2.jpeg" alt="Image" />
             <div class="carousel-caption">
               <div class="container">
                 <div class="row justify-content-center">
@@ -148,7 +133,7 @@
                       <strong class="text-dark">AMAS FARM LTD</strong>
                     </p>
                     <h1 class="display-1 text-dark mb-4 animated zoomIn">
-                      Quality Chicken
+                      Quality Poultry Products
                     </h1>
                     <a
                       href="product.html"
@@ -228,7 +213,7 @@
               <div class="col-sm-4">
                 <img
                   class="img-fluid bg-white w-100"
-                  src="Poultry/layer-hen-space.jpg"
+                  src="Poultry/white_layers-removebg.png"
                   alt="chicken picture"
                 />
               </div>
@@ -272,7 +257,7 @@
           data-wow-delay="0.1s"
           style="max-width: 500px"
         >
-          <p class="fs-5 fw-medium fst-italic text-primary">Our Products</p>
+          <p class="fs-5 fw-medium fst-italic text-primary"></p>
           <h1 class="display-6">Our poultry products</h1>
         </div>
         <div
@@ -292,7 +277,7 @@
             </div>
           </a>
           <a href="" class="d-block product-item rounded">
-            <img src="Poultry/layer new.jpg" alt="" />
+            <img src="Poultry/white layers2.jpg" alt="" />
             <div
               class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4"
             >
@@ -332,47 +317,35 @@
     </div>
     <!-- Products End -->
 
-    <!-- Article Start -->
+    <!-- Quick Article Gallery Start -->
     <div class="container-xxl py-5">
       <div class="container">
         <div class="row g-5">
-          <div class="col-lg-5 wow fadeIn" data-wow-delay="0.1s">
-            <img class="img-fluid" src="Poultry/layer new.jpg" alt="" />
-          </div>
+          
           <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
             <div class="section-title">
-              <p class="fs-5 fw-medium fst-italic text-primary">
-                Featured Acticle
-              </p>
-              <h1 class="display-6">
-                The Truth About Old Laying Hens: Are They Really Healthier?
-              </h1>
-            </div>
-            <p class="mb-4">
-              There's a common perception that older laying hens (sometimes
-              called "spent hens" or "soup hens") are healthier than their
-              younger counterparts.
-            </p>
-            <p class="mb-4">
-              Here's a breakdown of the nutritional value and potential benefits
-              of old layer hens:
-            </p>
-            <a href="blog.html" class="btn btn-primary rounded-pill py-3 px-5"
-              >Read More</a
+              <h1 class="fw-black" class="display-6">Our Gallery Show </h1>
+            </div><p class="mb-4">
+                  There's a common perception that older laying hens (sometimes
+                  called "spent hens" or "soup hens") are healthier than their
+                  younger counterparts.
+                </p>
+                <p class="mb-4">
+                  Check out our gallery for more pictures
+                </p>
+                <a
+              href="gallery.html"
+              class="btn btn-primary rounded-pill py-3 px-5"
+              >Click to see more</a
             >
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- Article End -->
+    <!-- Quick Article Gallery Start End -->
 
-    <!-- Video Start -->
-
-    <!-- Video Modal End -->
-
-    <!-- Store Start -->
-
-    <!-- Store End -->
+   
 
     <!-- Testimonial Start -->
     <div class="container-fluid testimonial py-5 my-5">
@@ -475,8 +448,8 @@
                 <div class="btn-square mx-auto mb-3">
                   <i class="fa fa-envelope fa-2x text-white"></i>
                 </div>
-                <p class="mb-2">info@example.com</p>
-                <p class="mb-0">support@example.com</p>
+                <p class="mb-2">info@amasfarmltd.com</p>
+                <p class="mb-0">support@amasfarmltd.com</p>
               </div>
               <div
                 class="col-md-4 text-center wow fadeInUp"
@@ -523,7 +496,7 @@
               8181748/+233 24 4113533
             </p>
             <p class="mb-2">
-              <i class="fa fa-envelope text-primary me-3"></i>info@example.com
+              <i class="fa fa-envelope text-primary me-3"></i>info@amasfarmltd.com
             </p>
             <div class="d-flex pt-3">
               <a class="btn btn-square btn-primary rounded-circle me-2" href=""
@@ -565,12 +538,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-            &copy; <a class="fw-medium" href="#">AMAS FARMS LTD</a>, All Right
+            &copy; <a class="fw-medium" href="index.html">AMAS FARMS LTD</a>, All Right
             Reserved.
           </div>
           <div class="col-md-6 text-center text-md-end">
-            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-            <a class="fw-medium" href="https://htmlcodex.com">HTML Codex</a>
           </div>
         </div>
       </div>
