--- a/product.html
+++ b/product.html
@@ -79,20 +79,7 @@
               <a href="product.html" class="nav-item nav-link active"
                 >Products</a
               >
-              <div class="nav-item dropdown">
-                <a
-                  href="#"
-                  class="nav-link dropdown-toggle"
-                  data-bs-toggle="dropdown"
-                  >Pages</a
-                >
-                <div class="dropdown-menu bg-light rounded-0 m-0">
-                  <a href="blog.html" class="dropdown-item">Blog Article</a>
-                  <a href="testimonial.html" class="dropdown-item"
-                    >Testimonial</a
-                  >
-                </div>
-              </div>
+              <a href="gallery.html" class="nav-item nav-link">Gallery</a>
               <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
             <div class="border-start ps-4 d-none d-lg-block">
@@ -134,7 +121,7 @@
           data-wow-delay="0.1s"
           style="max-width: 500px"
         >
-          <p class="fs-5 fw-medium fst-italic text-primary">Our Products</p>
+          <p class="fs-5 fw-medium fst-italic text-primary"></p>
           <h1 class="display-6">Our poultry products</h1>
         </div>
         <div
@@ -154,7 +141,7 @@
             </div>
           </a>
           <a href="" class="d-block product-item rounded">
-            <img src="Poultry/layer new.jpg" alt="" />
+            <img src="Poultry/white layers2.jpg" alt="" />
             <div
               class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4"
             >
